--- a/static/style.css
+++ b/static/style.css
@@ -373,6 +373,7 @@ body {
 .purpleText {
     color: var(--purple-text-color);
     font-weight: 800;
+    white-space: nowrap;
 }
 
 .textBackground {
