--- a/static/root.css
+++ b/static/root.css
@@ -150,3 +150,23 @@ html {
     --back-filter: 20px;
     --back-filter-color: #00000030;
 }
+html {
+    /*图片模糊背景＋黑色透明卡片+白色svg**/
+    --svgcolor: #ffffff;
+    --main-bg-color: url(https://api.imlazy.ink/img);
+    --main-text-color: #eeeeee;
+    --gradient-start: #bd34fe;
+    --gradient-middle: #e0321b;
+    --gradient-end: #41d1ff;
+    --purple-text-color: #66ccff;
+    --text-bg-color: #00000040;
+    --item-bg-color: #00000038;
+    --item-hover-color: #33333338;
+    --item-left-title-color: #ffffff;
+    --item-left-text-color: #ffffff;
+    --footer-text-color: #ffffff;
+    --left-tag-item: rgb(27 42 57 / 20%);
+    --card-filter: 0px;
+    --back-filter: 0px;
+    --back-filter-color: #00000030;
+}
