Update background picture api (supports auto detect devices)

--- a/static/root.css
+++ b/static/root.css
@@ -153,7 +153,7 @@ html {
 html {
     /*图片模糊背景＋黑色透明卡片+白色svg**/
     --svgcolor: #ffffff;
-    --main-bg-color: url(https://api.imlazy.ink/img);
+    --main-bg-color: url(https://www.loliapi.com/acg/);
     --main-text-color: #eeeeee;
     --gradient-start: #bd34fe;
     --gradient-middle: #e0321b;
