a {cursor: url(static/other/millennium_link.cur), auto;}

--- a/static/style.css
+++ b/static/style.css
@@ -27,8 +27,10 @@
     transition: background-color 0.2s ease;
 }
 
+a {cursor: url(static/other/millennium_link.cur), auto;}
+
 a:hover,
-a:link {cursor: url('static/other/millennium_link.cur'), auto;}
+a:link,
 a:visited,
 a:active,
 a:focus {
@@ -39,7 +41,7 @@ a:focus {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-a:-webkit-any-link {cursor: url('static/other/millennium_link.cur'), auto;}
+/* a:-webkit-any-link {cursor: url('static/other/millennium_link.cur'), auto;} */
 
 img a {
     -webkit-touch-callout: none;
